# bl616_usb2uartjtag

./: .gitignore  CMakeLists.txt  README.md  io_cfg.h  jtag_process.c  jtag_process.c.gowin  main.c  mpsse_cmd.md  submodule_commit_info.txt  uart_interface.c  uart_interface.h  usb_descriptor.c  usbd_ftdi.c  usbd_ftdi.h
